# win_ui_kit

./: CMakeLists.txt  README.md
_library/SFML-2.6.1/doc/html/: jquery.js
_library/sfml/include/SFML/: Audio.hpp  Config.hpp  GpuPreference.hpp  Graphics.hpp  Main.hpp  Network.hpp  OpenGL.hpp  System.hpp  Window.hpp
_library/sfml/include/SFML/Audio/: AlResource.hpp  Export.hpp  InputSoundFile.hpp  Listener.hpp  Music.hpp  OutputSoundFile.hpp  Sound.hpp  SoundBuffer.hpp  SoundBufferRecorder.hpp  SoundFileFactory.hpp  SoundFileReader.hpp  SoundFileWriter.hpp  SoundRecorder.hpp  SoundSource.hpp  SoundStream.hpp
_library/sfml/include/SFML/Graphics/: BlendMode.hpp  CircleShape.hpp  Color.hpp  ConvexShape.hpp  Drawable.hpp  Export.hpp  Font.hpp  Glsl.hpp  Glyph.hpp  Image.hpp  PrimitiveType.hpp  Rect.hpp  RectangleShape.hpp  RenderStates.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Text.hpp  (+10 more)
include/core/: tool.hpp
include/core/message/: ActiveKeyBinding.hpp  EventBinding.hpp  Mouse.hpp
include/core/pages/: ComplexPage.hpp  ControlPage.hpp  InteractivePage.hpp  Page.hpp  page_emplate.hpp
include/core/window/: Window.hpp
include/customizable/components/: Circle.hpp  FrameAnimatedSprite.hpp  ParticleBuilder.hpp  TextureItem.hpp  TimeAnimatedSprite.hpp  inputbox.hpp  line.hpp  text.hpp  textbox.hpp  timepiece.hpp
include/customizable/controls/: Area.hpp  Interactive.hpp  button.hpp
include/game/: boss.hpp  bullet.hpp  hitbox.hpp  player.hpp  playerWithCircle.hpp
include/test/: TestPage.hpp  main.hpp
src/core/message/: ActiveKeyBinding.cpp  EventBinding.cpp  Mouse.cpp
src/core/pages/: Page.cpp
src/core/window/: Window.cpp
src/customizable/components/: TextureItem.cpp  TimeAnimatedSprite.cpp  inputbox.cpp  textbox.cpp
src/test/: main.cpp
(+48 files in other folders)
